# grepping-boom.nvim

./: .gitignore  Cargo.toml  Makefile  README.md  flake.nix  shell.nix
src/: lib.rs
